--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -470,6 +470,7 @@ gEnableRingBuffer=0
 PktlogBufSize=1
 
 RoamRssiDiff=5
+gRoamPrefer5GHz=1
 gSelect5GHzMargin=5
 roam_bad_rssi_thresh_offset_2g=0
 roam_bg_scan_bad_rssi_thresh=-76
