--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -51,6 +51,12 @@ on init
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     start vendor.qseecomd
 
+    # Xiaomi Thermal Profiles permissions
+    chmod 0664 /sys/devices/class/thermal/thermal_message/sconfig
+    chown system system /sys/devices/class/thermal/thermal_message/sconfig
+    chmod 0666 /sys/devices/class/thermal/thermal_message/temp_state
+    chown system system /sys/devices/class/thermal/thermal_message/temp_state
+
 on fs
     start hwservicemanager
     mount_all /vendor/etc/fstab.qcom --early
@@ -58,10 +64,6 @@ on fs
     chmod 0771 /mnt/vendor/persist
     restorecon_recursive /mnt/vendor/persist
     mkdir /mnt/vendor/persist/data 0700 system system
-    chmod 0664 /sys/class/thermal/thermal_message/sconfig
-    chown system system /sys/class/thermal/thermal_message/sconfig
-    chmod 0666 /sys/class/thermal/thermal_message/temp_state
-    chown system system /sys/class/thermal/thermal_message/temp_state
     mount ext4 /dev/block/bootdevice/by-name/rescue /mnt/rescue noatime
     restorecon_recursive /mnt/rescue
 
