fog: init: Rework init
Co-authored-by: angelomds42 <angelomds42@gmail.com>
Co-authored-by: Michael Bestas <mkbestas@lineageos.org>
Co-authored-by: CHRISL7 <70589286+CHRISL7@users.noreply.github.com>
Signed-off-by: Kinnara <186306024+Kinnara-icz@users.noreply.github.com>

--- a/init/init.qcom.rc
+++ b/init/init.qcom.rc
@@ -25,9 +25,10 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-import /vendor/etc/init/hw/init.qcom.usb.rc
-import /vendor/etc/init/hw/init.qcom.power.rc
-import /vendor/etc/init/hw/init.target.rc
+import init/hw/init.qcom.usb.rc
+import init/hw/init.xiaomi.rc
+import init/hw/init.xiaomi.fingerprint.rc
+import init/hw/init.target.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
